Enhance SEO with Open Graph and Twitter metadata
Added Open Graph and Twitter meta tags for better sharing.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DriveSync - Az autód digitális asszisztense</title>
+    
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://MorvaiRoland.github.io/drivesync-website/">
+    <meta property="og:title" content="DriveSync - Az autód digitális asszisztense">
+    <meta property="og:description" content="Töltsd le ingyen! Költségvetés követés, szerviznapló, statisztikák és Google szinkronizáció egy modern Windows alkalmazásban.">
+    <meta property="og:image" content="https://MorvaiRoland.github.io/drivesync-website/preview.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="DriveSync - Az autód digitális asszisztense">
+    <meta name="twitter:description" content="Töltsd le ingyen! Költségvetés követés, szerviznapló és statisztikák.">
+    <meta name="twitter:image" content="https://MorvaiRoland.github.io/drivesync-website/preview.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     
@@ -143,7 +155,7 @@
             color: var(--primary);
         }
 
-        /* --- ÚJ SCREENSHOT KONTÉNER ÉS STÍLUSOK --- */
+        /* --- SCREENSHOT KONTÉNER --- */
         .hero-screenshots-container {
             display: flex;
             gap: 30px; /* Távolság a két kép között */
