--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DriveSync - High Performance Car Manager</title>
     
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="preview.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://MorvaiRoland.github.io/drivesync-website/">
     <meta property="og:title" content="DriveSync - Az autód digitális asszisztense">
