--- a/index.html
+++ b/index.html
@@ -130,6 +130,53 @@
         }
         @keyframes glitch-anim { 0% { clip: rect(30px, 9999px, 10px, 0); } 100% { clip: rect(30px, 9999px, 10px, 0); } }
         @keyframes glitch-anim-2 { 0% { clip: rect(10px, 9999px, 80px, 0); } 100% { clip: rect(10px, 9999px, 80px, 0); } }
+        /* --- INFINITE MARQUEE (FUTÓ SÁV) --- */
+.marquee-section {
+    padding: 40px 0;
+    background: rgba(255,255,255,0.02);
+    border-top: 1px solid rgba(255,255,255,0.05);
+    border-bottom: 1px solid rgba(255,255,255,0.05);
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+}
+
+.marquee-content {
+    display: inline-block;
+    animation: marquee 20s linear infinite;
+}
+
+.marquee-item {
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    margin: 0 40px;
+    color: var(--text-muted);
+    font-weight: 700;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    opacity: 0.7;
+    transition: 0.3s;
+}
+
+.marquee-item:hover {
+    color: var(--accent);
+    opacity: 1;
+    text-shadow: 0 0 15px var(--accent-glow);
+}
+
+.marquee-item i { font-size: 1.5rem; }
+
+@keyframes marquee {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-50%); }
+}
+
+/* Mobilon kicsit lassabb */
+@media (max-width: 768px) {
+    .marquee-content { animation-duration: 15s; }
+    .marquee-item { font-size: 1rem; margin: 0 20px; }
+}
 
         /* --- NAVIGÁCIÓ --- */
         nav {
@@ -586,6 +633,26 @@
         </div>
     </section>
 
+    <section class="marquee-section">
+    <div class="marquee-content">
+        <span class="marquee-item"><i class="fab fa-java"></i> Java 24</span>
+        <span class="marquee-item"><i class="fas fa-database"></i> MySQL</span>
+        <span class="marquee-item"><i class="fab fa-windows"></i> Windows 10/11</span>
+        <span class="marquee-item"><i class="fas fa-shield-alt"></i> Secure</span>
+        <span class="marquee-item"><i class="fas fa-code"></i> Open Source</span>
+        <span class="marquee-item"><i class="fas fa-bolt"></i> Fast Performance</span>
+        <span class="marquee-item"><i class="fas fa-layer-group"></i> JavaFX</span>
+        
+        <span class="marquee-item"><i class="fab fa-java"></i> Java 24</span>
+        <span class="marquee-item"><i class="fas fa-database"></i> MySQL</span>
+        <span class="marquee-item"><i class="fab fa-windows"></i> Windows 10/11</span>
+        <span class="marquee-item"><i class="fas fa-shield-alt"></i> Secure</span>
+        <span class="marquee-item"><i class="fas fa-code"></i> Open Source</span>
+        <span class="marquee-item"><i class="fas fa-bolt"></i> Fast Performance</span>
+        <span class="marquee-item"><i class="fas fa-layer-group"></i> JavaFX</span>
+    </div>
+</section>
+
     <section id="roadmap">
         <div class="section-header" data-aos="fade-up"><h2>Jövőbeli <span>Tervek</span></h2></div>
         <div class="roadmap-container">
@@ -746,9 +813,14 @@
         <div><i class="fas fa-bolt"></i> Ping: <span id="ping-val">24</span>ms</div>
     </div>
 </div>
-    <footer>
+<footer>
         <div class="footer-logo">Drive<span>Sync</span></div>
-        <p>&copy; 2025 Minden jog fenntartva.</p>
+        <p>&copy; 2025 Minden jog fenntartva. Készítette: <span style="color: var(--accent)">Morvai Roland</span></p>
+        
+        <div style="margin: 15px 0; font-size: 0.85rem;">
+            <a href="legal.html" style="color: #666; text-decoration: none; margin: 0 10px; transition: 0.3s;">Adatvédelem & Feltételek</a>
+        </div>
+
         <div style="margin-top: 20px;">
             <a href="https://github.com/MorvaiRoland" style="color: #fff; font-size: 1.5rem;"><i class="fab fa-github"></i></a>
         </div>
