Add 'Docs' link to navigation menu

--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
             <li><a href="#tech">Tech</a></li>
             <li><a href="#roadmap">Tervek</a></li>
             <li><a href="#faq">Infó</a></li>
+            <li><a href="docs.html">Docs</a></li>
             <li><a href="https://github.com/MorvaiRoland/drivesync-website/issues" target="_blank" class="bug-btn"><i class="fas fa-bug"></i> Hibajelentés</a></li>
         </ul>
         <a href="#download" class="btn-download-nav"><i class="fas fa-cloud-download-alt"></i> Letöltés</a>
